# retina

./: .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: interop.md
.github/workflows/: check-license.py  ci.yml
benches/: bunny.rtsp  client.rs  depacketize.rs
examples/client/: Cargo.toml  info.rs  main.rs  metadata.rs  mp4.rs  onvif.rs
examples/client/src/: info.rs  jpeg.rs  main.rs  mp4.rs  onvif.rs  webcodecs.rs
examples/client/src/webcodecs/: index.html  webcodecs.js
examples/ffmpeg-decode/: Cargo.toml
examples/ffmpeg-decode/src/: main.rs
examples/webrtc-proxy/: Cargo.toml
examples/webrtc-proxy/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: depacketize_h264.rs  depacketize_h265.rs  depacketize_jpeg.rs  depacketize_mjpeg.rs  h265_nal.rs  roundtrip_h264.rs  roundtrip_rtsp_message.rs
fuzz/src/: lib.rs
fuzz_afl/: .gitignore  Cargo.toml  README.md
fuzz_afl/src/: depacketize_jpeg.rs
src/: error.rs  hex.rs  lib.rs  mostly_ascii.rs  rtcp.rs  rtp.rs  testutil.rs  tokio.rs
src/client/: channel_mapping.rs  mod.rs  parse.rs  rtp.rs  teardown.rs  timeline.rs
src/client/testdata/: anjvision_describe.txt  anpviz_sdp.txt  bad_rtptime.txt  bunny_play.txt  bunny_setup.txt  dahua_describe_h264_aac_onvif.txt  dahua_describe_h265_pcma.txt  dahua_options.txt  dahua_play.txt  dahua_setup.txt  foscam_describe.txt  geovision_sdp.txt  gw_main_describe.txt  gw_main_play.txt  gw_main_setup_audio.txt  gw_main_setup_video.txt  gw_sub_describe.txt  gw_sub_play.txt  gw_sub_setup.txt  h264dvr_describe.txt  h264dvr_play.txt  h264dvr_setup_audio.txt  h264dvr_setup_video.txt  hikvision_describe.txt  hikvision_play.txt  hikvision_setup.txt  hikvision_setup_ssrc_space.txt  ipcam_describe.txt  laureii_play.txt  longse_unauthorized.txt  luckfox_rkipc_setup_tcp.txt  luckfox_rkipc_setup_udp.txt  macrovideo_describe.txt  missing_content_type_describe.txt  reolink_describe.txt  reolink_describe_control_first.txt  reolink_play.txt  reolink_setup.txt  reolink_teardown.txt  tplink_sdp.txt  (+3 more)
src/codec/: aac.rs  g723.rs  h264.rs  h265.rs  h26x.rs  jpeg.rs  mod.rs  onvif.rs  simple_audio.rs
src/codec/h264/: dts_extractor.rs
src/codec/h265/: nal.rs  record.rs
src/dts_extractor/: h264.rs  mod.rs
src/rtsp/: inputs.rs  mod.rs  msg.rs  parse.rs  table.rs
src/rtsp/testdata/: request.txt  response.txt
