[workspace]
members = [".", "examples/client", "examples/webrtc-proxy"]
default-members = ["."]

[package]
name = "retina"
version = "0.4.5"
authors = ["Scott Lamb <slamb@slamb.org>"]
license = "MIT/Apache-2.0"
edition = "2021"
keywords = ["rtsp", "multimedia", "video", "streaming", "ip-camera"]
categories = ["network-programming", "multimedia"]
description = "high-level RTSP multimedia streaming library"
repository = "https://github.com/scottlamb/retina"
include = ["src/**/*", "benches", "Cargo.toml"]
rust-version = "1.64"

[dependencies]
base64 = "0.13.0"
bitstream-io = "1.1"
bytes = "1.0.1"
futures = "0.3.14"
h264-reader = "0.6.0"
hex = "0.4.3"
http-auth = "0.1.2"
log = "0.4.8"
once_cell = "1.7.2"
pin-project = "1.0.7"
pretty-hex = "0.3.0"
rand = "0.8.3"
rtsp-types = "0.0.5"
sdp-types = "0.1.4"
smallvec = { version = "1.6.1", features = ["union"] }
thiserror = "1.0.25"
time = "0.1.43"
tokio = { version = "1.11.0", features = ["macros", "net", "rt", "time"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
url = "2.2.1"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }
mylog = { git = "https://github.com/scottlamb/mylog" }
tokio = { version = "1.5.0", features = ["io-util", "macros", "rt-multi-thread", "test-util"] }

[profile.bench]
debug = true

[[bench]]
name = "client"
harness = false

[[bench]]
name = "depacketize"
harness = false
