[package]
name = "client"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.88"

[dependencies]
bytes = "1.0.1"
futures = "0.3.14"
log = "0.4.8"
retina = { path = "../../" }
tokio = { version = "1.5.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
url = "2.2.1"
anyhow = "1.0.41"
itertools = "0.14.0"
mylog = { git = "https://github.com/scottlamb/mylog" }
clap = { version = "4.1.4", features = ["derive"] }
