[package]
name = "client"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.88"

[dependencies]
bytes = "1.0.1"
futures = "0.3.14"
log = "0.4.8"
retina = { path = "../../" }
tokio = { version = "1.5.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
url = "2.2.1"
anyhow = "1.0.41"
itertools = "0.14.0"
mylog = { git = "https://github.com/scottlamb/mylog" }
clap = { version = "4.1.4", features = ["derive"] }
tokio-tungstenite = "0.28.0"
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
