[package]
name = "ffmpeg-decode"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
ffmpeg-next = { version = "5.0.3", default-features=false, features = ["codec", "format", "software-scaling"] }
futures = "0.3.14"
log = "0.4.8"
mylog = { git = "https://github.com/scottlamb/mylog" }
retina = { path = "../../" }
structopt = "0.3.21"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.2.1"
