[package]
name = "ffmpeg-decode"
version = "0.0.0"
edition = "2024"
publish = false
rust-version = "1.88"

[features]
h265 = ["retina/h265"]

[dependencies]
anyhow = "1.0.41"
clap = { version = "4.1.4", features = ["derive"] }
ffmpeg-next = { version = "8.0.0", default-features=false, features = ["codec", "format", "software-scaling"] }
futures = "0.3.14"
log = "0.4.8"
mylog = { git = "https://github.com/scottlamb/mylog" }
retina = { path = "../../" }
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.2.1"
